# customer-churn-prediction-kaggle

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cache/plugin/git-committers/: page-authors.json
checklist/: index.html
competition/: index.html
conclusion/: index.html
dataset/dataset_explanation/: index.html
dataset/dataset_selection/: index.html
docs/: checklist.md  competition.md  conclusion.md  index.md  references.md
docs/dataset/: dataset_explanation.md  dataset_selection.md
docs/evaluation/: error_curves.md  metrics.md
docs/training/: data_cleaning_normalization.md  mlp_implementation.md  model_training.md  training_testing_strategy.md
evaluation/error_curves/: index.html
evaluation/metrics/: index.html
notebooks/: 1_exploration.ipynb  2_preprocess.ipynb  3_train_egc.ipynb  3_train_lk.ipynb  3_training.ipynb  buffer.py  explor_plots_funcs.py  gridcv.txt  study1.txt  train_mlp_cv_optuna.py
notebooks/artifacts/: optuna_study.pkl
references/: index.html
search/: search_index.json
training/data_cleaning_normalization/: index.html
training/mlp_implementation/: index.html
training/model_training/: index.html
training/training_testing_strategy/: index.html
